# SDL-GPU-KTX-Sample

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  app_state.c  app_state.h  error_check.c  error_check.h  ktx_helpers.c  ktx_helpers.h  main.c  upload.c  upload.h
assets/: Attribution.md
cmake/: compile_shaders.cmake
shaders/: CMakeLists.txt  shader_2d.slang  shader_3d.slang  shader_arr.slang
